--- a/src/Views/layouts/partial/footer.twig
+++ b/src/Views/layouts/partial/footer.twig
@@ -48,8 +48,8 @@
             <div class="footer-bottom">
                 <div class="legal-links">
                     <ul>
-                        <li><a href="/termos" class="legal-link">Termos de Uso</a></li>
-                        <li><a href="/privacidade" class="legal-link">Política de Privacidade</a></li>
+                        <li><a href="/terms" class="legal-link">Termos de Uso</a></li>
+                        <li><a href="/privacy" class="legal-link">Política de Privacidade</a></li>
                         <li><a href="/cookies" class="legal-link">Política de Cookies</a></li>
                         <li><a href="/acessibilidade" class="legal-link">Acessibilidade</a></li>
                         <li><a href="/sitemap" class="legal-link">Mapa do Site</a></li>
