--- a/src/Views/home/index.twig
+++ b/src/Views/home/index.twig
@@ -70,13 +70,13 @@
         {% for course in popularCourses %}
           <div class="course-item" data-index="{{ loop.index0 }}">
             <div class="rank">
-              <svg class="crown-icon" viewBox="0 0 24 24"><!-- seu SVG de coroa aqui --><path d="M5 16l-3-8 6 4 4-6 4 6 6-4-3 8H5z"/></svg>
+              <svg class="crown-icon" viewBox="0 0 24 24">
+                <path d="M5 16l-3-8 6 4 4-6 4 6 6-4-3 8H5z"/>
+              </svg>
               <span class="rank-number">{{ loop.index }}</span>
             </div>
             <div class="imagem-do-curso">
-              {% if course.image %}
-                <img src="{{ course.image }}" alt="{{ course.title }}">
-              {% endif %}
+              <img src="/assets/images/sliders/cursosimg.jpeg" alt="Imagem do curso">
             </div>
             <div class="course-content">
               <h3 class="course-title">{{ course.title }}</h3>
@@ -95,6 +95,9 @@
         </div>
       {% endif %}
     </div>
+  </div>
+</section>
+
 
     <div class="slider-nav">
       <button class="nav-btn prev" aria-label="Anterior">←</button>
@@ -201,9 +204,6 @@
                                  <label><input type="checkbox" name="pref_conteudos"> Conteúdos</label>
                              </div>
                              <button type="submit" class="btn btn-primary">Inscrever</button>
-                         </div>
-                         <div class="privacy-notice">
-                             <small>Respeitamos sua privacidade. Você pode cancelar a qualquer momento.</small>
                          </div>
                      </form>
                  </div>
