--- a/src/Views/public/courses/index.twig
+++ b/src/Views/public/courses/index.twig
@@ -26,7 +26,7 @@
     {% for course in courses %}
       <li class="course-item">
         <img
-          src="{{ course.getImage()|default('https://images.pexels.com/photos/355952/pexels-photo-355952.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') }}"
+          src="/assets/images/sliders/cursosimg.jpeg"
           alt="{{ course.getTitle() }}"
           class="course-img"
         >
