--- a/src/Views/teacher/courses/show.twig
+++ b/src/Views/teacher/courses/show.twig
@@ -63,6 +63,9 @@
       <a href="/teacher/courses/{{ course.getId() }}/comments" class="course-detail-action-button">
         <i class="fas fa-comment-dots"></i> Ver Comentários
       </a>
+                    <a href="/teacher/courses/{{ course.getId() }}/forum" class="btn btn-forum" aria-label="Ir para o fórum do curso {{ course.getTitle() }}">
+                <i class="fas fa-comments"></i> Ir para o Fórum
+              </a>
     </div>
   </div>
 </section>
